Fixed box size out of bound

--- a/style.css
+++ b/style.css
@@ -26,7 +26,12 @@ a{
     padding-left: 1%;
     padding-right: 1%;
 }
-
+.row-fix{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
 .blog_description{
     /* padding-bottom: 3%; */
     text-align: center;
